fix(navbar): page contents were overlapping navbar
The contents of the Events and Team page were overlapping the navbar creating a visual bug, that has been fixed

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,9 @@
 
 $dark-mode-class: 'dark-theme';
 
+//Z-index
+$z-header: 2;
+
 // Colors
 $text-primary: $nord3;
 $text-secondary: $nord6;
